Create launcher module for gatlingFx