@@ -65,6 +65,29 @@ subprojects {
             }
         }
     }
+
+    if (sourceSets.findByName('integrationTest') != null) {
+        configurations {
+            integrationTestRuntimeElements {
+                canBeConsumed = true
+                canBeResolved = false
+
+                extendsFrom integrationTestRuntimeClasspath
+
+                outgoing.capability(
+                        "${project.group}:${project.name}-integration-tests:${project.version}"
+                )
+            }
+        }
+        tasks.register('integrationTestJar', Jar) {
+            archiveClassifier = 'integration-test'
+
+            from sourceSets.integrationTest.output
+        }
+        artifacts {
+            integrationTestRuntimeElements integrationTestJar
+        }
+    }
 }
 
 tasks.register('jacocoTestReport', JacocoReport) {
@@ -97,17 +120,4 @@ tasks.register('jacocoTestReport', JacocoReport) {
 
 tasks.named('clean') {
     delete layout.buildDirectory
-}
-
-tasks.register("gatlingFx", JavaExec) {
-    group = "verification"
-    description = "Runs GatlingFx simulations"
-
-    classpath = files(rootProject.subprojects
-        .findAll { it.name in ["core", "proxy", "wiremock"] }
-        .collect { it.sourceSets.integrationTest.runtimeClasspath }
-    )
-    mainClass = "com.senthora.gatlingfx.runtime.core.application.GatlingFx"
-
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
